# pre-transcribing-tool

./: package-lock.json  package.json
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  events.rs  main.rs  regexes.rs  settings.rs  speakers.rs  transcriber.rs  utils.rs
src-tauri/src/file_formatter/: mod.rs  transcriber.rs
src-tauri/src/render_table_creator/: animation_item.rs  config.rs  docx.rs  error.rs  main.rs  mod.rs  scene_item.rs
src-tauri/src/transcribing_formatter/: mod.rs  outfit_map.rs
src-tauri/src/writing_formatter/: mod.rs
src/lib/: ToolUI.svelte
