[package]
name = "transcribing-tool"
version = "1.0.2"
description = "College Kings Transcring Tool"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.*", features = [] }

[dependencies]
tauri = { version = "1.*", features = ["dialog-all", "shell-open"] }
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
regex = "1.*"
dirs = "5.*"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
