[package]
name = "transcribing-tool"
version = "2.0.2"
description = "College Kings Transcring Tool"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.*", features = [] }

[dependencies]
tauri = { version = "1.*", features = ["devtools", "dialog-all", "shell-open"] }
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
regex = "1.*"
dirs = "5.*"
docx-rs = "0.4.*"
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
